--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-remark": "^2.1.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
