--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "better-react-mathjax": "^2.0.3",
     "framer-motion": "^11.1.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "react-remark": "^2.1.0",
+    "react-markdown": "^9.0.1",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
