--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-image-export-optimizer",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +16,7 @@
     "better-react-mathjax": "^2.0.3",
     "framer-motion": "^11.1.1",
     "next": "14.2.4",
+    "next-image-export-optimizer": "^1.14.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
