--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Image optimization
+**/nextImageExportOptimizer
+**/next-image-export-optimizer-hashes.json
